<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.ehealthai.doctor.ui.activities.PatientDetails.ui.home.PatientDetailsFragment"
        android:label="@string/title_pt"
        tools:layout="@layout/fragment_patientdetails" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.ehealthai.doctor.ui.activities.PatientDetails.ui.dashboard.AddNotesFragment"
        android:label="@string/title_an"
        tools:layout="@layout/fragment_addnotes" />

    <fragment
        android:id="@+id/navigation_patient_reports"
        android:name="com.app.ehealthai.doctor.ui.activities.PatientDetails.ui.PatientReportsFragment"
        android:label="@string/title_vitals"
        tools:layout="@layout/fragment_patient_reports" />
    <fragment
        android:id="@+id/navigation_patient_obstaclesData"
        android:name="com.app.ehealthaidoctor.ObstaclesData"
        android:label="fragment_obstacles_data"
        tools:layout="@layout/fragment_obstacles_data" />

</navigation>
