<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_custom_video_session"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ui.activities.VideoSessionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_call_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/switch_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/switch_camera"
            android:scaleType="fitXY"
            android:src="@drawable/switchcam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signalstregnth"
            app:layout_constraintStart_toEndOf="@+id/switch_btn"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/statusc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/ezshifa"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/signalstregnth"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/signal_strength"
            android:src="@drawable/goodsignal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_internet_status_video_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:maxWidth="150dp"
            android:text="Status"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signalstregnth" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clVideoViews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ivCaptured"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_call_toolbar">

        <ImageView
            android:id="@+id/iv_idle_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/video_off_img"
            android:scaleType="fitXY"
            android:src="@drawable/videosessionidleimg"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <FrameLayout
            android:id="@+id/fl_remote_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <FrameLayout
            android:id="@+id/local_video_view_container"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:elevation="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivCaptured"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clVideoViews" />


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footerzoom2"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/muteBtn"
            android:layout_width="12dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/mute"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@+id/video_btn"
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/toggle_video"
            android:src="@drawable/videoon" />


        <ImageView
            android:id="@+id/addnotes"
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/add_notes"
            android:src="@drawable/notes">

        </ImageView>

        <ImageView
            android:id="@+id/more"
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/chats"
            android:src="@drawable/vschaticon" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-14dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rectangle_rounded"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="gone"
            app:fabCustomSize="28dp"
            app:maxImageSize="16dp" />

        <ImageView
            android:id="@+id/moreic"
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/more"
            android:src="@drawable/moredots" />

        <ImageView
            android:id="@+id/endCallBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/end_call"
            android:src="@drawable/endbtn">

        </ImageView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
